--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div class="container">
     <a href="#" class="logo">Book Management System</a>
     <ul class="nav-links">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Books</a></li>
+      <li><a href="home.html">Home</a></li>
+      <li><a href="book.html">Books</a></li>
     </ul>
   </div>
 </nav>
