--- a/home.html
+++ b/home.html
@@ -3,24 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kanban Board</title>
+    <title>Home</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_home.css">
 </head>
 <body>
-    <div class="container">
-        <div class="kanban-board">
-            <div class="column">
-                <div class="column-header">T</div>
-                <div class="tasks" id="todo">
-                    <!-- Tasks will be dynamically added here -->
-                </div>
+    <div>
+        <div class="row">
+            <div class="container col-md-2">
+                    <img src="images/img4.jpg" alt="">
+                    <div class="center text-light">My Life My Rules</div>
+                    <div class="bottom-left text-light">$3.99</div>
+                    <div class="bottom-right text-light">- Shakespeare</div>
             </div>
-
         </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="script.js"></script>
+    <script src="script_home.js"></script>
 </body>
 </html>
