--- a/index.html
+++ b/index.html
@@ -2,20 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width" ,initial-scale=1,shrink-to-fit=no">
-    <title>BMS</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BMS-title</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
 </head>
 <body>
 <nav class="navbar">
-  <div class="container">
-    <a href="#" class="logo">Book Management System</a>
-    <ul class="nav-links">
+  <div class="container col-md-12">
+    <a href="#" class="logo col-md-6 ">Book Management System</a>
+    <ul class="nav-links col-md-2">
       <li><a href="home.html">Home</a></li>
       <li><a href="book.html">Books</a></li>
     </ul>
   </div>
 </nav>
+<div class="imagetitle">
+    <img src="images/image-title.jpg" alt="centered image">
+</div>
+<div id="footer">
+    <div class="container col-md-12">
+            <div class="col-md-8 fs-6">Copyright @ 2024 TrooTech Pvt. Ltd. </div>
+            <div class="col-md-4">
+                <ul id="social-icons" class="d-flex justify-content-end">
+                    <li>
+                        <a href="" class="fa-brands fa-square-facebook"></a>
+                    </li>
+                    <li>
+                        <a href="" class="fa-brands fa-linkedin"></a>
+                    </li>
+                    <li>
+                        <a href="" class="fa-brands fa-square-x-twitter"></a>
+                    </li>
+                </ul>
+            </div>
+    </div>
+</div>
 </body>
 </html>
