--- a/book.html
+++ b/book.html
@@ -23,6 +23,7 @@
   </thead>
   <tbody id="id_bookbody">
 <!--  append this body using javascript by adjacentHTMl -->
+<!--      data of a book add in create appends here in a list-->
 
   </tbody>
   </table>
