--- a/home.html
+++ b/home.html
@@ -7,16 +7,10 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style_home.css">
 </head>
-<body>
-    <div>
-        <div class="row">
-            <div class="container col-md-2">
-                    <img src="images/img4.jpg" alt="">
-                    <div class="center text-light">My Life My Rules</div>
-                    <div class="bottom-left text-light">$3.99</div>
-                    <div class="bottom-right text-light">- Shakespeare</div>
-            </div>
-        </div>
+<body class="body">
+
+    <div class="row" id="kanban_image">
+<!--        container of each book appends here-->
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
