--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <div class="col-md-4">
                 <ul id="social-icons" class="d-flex justify-content-end">
                     <li>
-                        <a href="" class="fa-brands fa-square-facebook"></a>
+                        <a href="https://www.facebook.com/" class="fa-brands fa-square-facebook"></a>
                     </li>
                     <li>
-                        <a href="" class="fa-brands fa-linkedin"></a>
+                        <a href="https://www.linkedin.com/" class="fa-brands fa-linkedin"></a>
                     </li>
                     <li>
-                        <a href="" class="fa-brands fa-square-x-twitter"></a>
+                        <a href="https://www.twitter.com" class="fa-brands fa-square-x-twitter"></a>
                     </li>
                 </ul>
             </div>
