--- a/edit.html
+++ b/edit.html
@@ -6,6 +6,7 @@
         <title>Edit Book </title>
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style_edit.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
     </head>
     <body>
         <div class="row justify-content-md-center">
@@ -18,6 +19,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <form id="book-form" class="book-form">
+                                    <label  id = "img-label" for="imageUpload"><i class="fa-solid fa-pencil"></i></label>
                                     <input type='file' id="imageUpload"   accept=".png, .jpg, .jpeg" />
                                     <input type="hidden" id="book-id" value="1">
                                     <label for="book-name">Name:</label>
